fix: prevents zoom on iOS

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -191,3 +191,12 @@
   /* font-weight: 700; */
   font-style: normal;
 }
+
+@media screen and (max-width: 768px) {
+  input[type="text"],
+  input[type="search"],
+  input[type="email"],
+  input[type="tel"] {
+    font-size: 16px !important; /* Prevents zoom on iOS */
+  }
+}
